# vcprompt-rs

./: Cargo.toml  LICENSE.md  justfile
src/: cli.rs  format.rs  git.rs  hg.rs  main.rs  status.rs  util.rs  vcs.rs
