[package]
name = "vcprompt-rs"
version = "0.1.0"
authors = ["Nick Murphy <stefan@sofa-rockers.org>"]
description = "Version control information in your shell prompt"
documentation = "https://github.com/comfortablynick/vcprompt-rs/blob/master/README.md"
homepage = "https://github.com/comfortablynick/vcprompt-rs"
repository = "https://github.com/comfortablynick/vcprompt-rs"
keywords = ["prompt", "bash", "zsh", "git", "hg"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "BSD-3-Clause"
edition = "2018"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
target-cpu = 'native'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
getopts = "0.2"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
